--- a/public/style.css
+++ b/public/style.css
@@ -377,6 +377,7 @@ header:hover .navbar-container .navbar-custom .nav-links li a {
 
 .logo {
 	cursor: pointer;
+	width: 100px;
 	margin: 0;
 	color: var(--light-shade-m1);
 	transition: ease-in-out 0.3s;
