--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -49,7 +49,7 @@
 
 			<nav class="navbar-container">
 				<nav class="navbar-custom">
-					<a href="/"><img src="/img/logo.svg" /></a>
+					<a href="/"><img clas="logo" src="/svg/logo.svg" /></a>
 					<ul class="nav-links">
 						<li>
 							<a href="/About" class="navbar-text <%= (locals.active && locals.active == 'About') ? 'active' : '' %>">About</a>
