cache config update

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -22,7 +22,7 @@ http {
 	underscores_in_headers on;
 	
 	server_tokens off;
-	sendfile on;
+	#sendfile on;
 	sendfile_max_chunk 2m;
 
 	#Must read the body in 5 seconds.
