--- a/views/User.ejs
+++ b/views/User.ejs
@@ -27,7 +27,7 @@
 
 		<div id="parameters" class="tab col-xl-9 col-10 nodisplay">
 			<div class="col-md-10 offset-md-1 wrapper">
-				<h1 class="single-title text-center">Account</h1>
+				<h1 class="single-title text-center">Settings</h1>
 				<div class="alert alert-warning alert-static w-100 mb-3" role="alert">
 					Remember to keep these informations private
 				</div>
@@ -75,7 +75,7 @@
 		</div>
 		<div id="delivery" class="tab col-xl-9 col-10">
 			<div class="col-md-10 offset-md-1 wrapper">
-				<h1 class="single-title text-center">Delivery</h1>
+				<h1 class="single-title text-center">Delivery Address</h1>
 				<hr />
 				<form id="deliveryform" method="POST" action="/api/user/patch/delivery-info">
 					<div class="row">
