--- a/views/legals.ejs
+++ b/views/legals.ejs
@@ -23,7 +23,7 @@
 				Le responsable de la publication est une<strong> personne physique</strong><br />
 				<br />
 				Le Webmaster est  : <strong>Blin Andréas</strong><br />
-				Contacter le Webmaster : <strong><a href="mailto:ablin.dev@gmail.com?subject=Contact a partir des mentions lÃ©gales via le site maral.fr">ablin.dev@gmail.com</a></strong
+				Contacter le Webmaster : <strong><a href="mailto:ablin.dev@gmail.com?subject=Contact a partir des mentions légales via le site maral.fr">ablin.dev@gmail.com</a></strong
 				><br />
 				L’hebergeur du site est : <strong>Heroku 50 Fremont St. Suite 300 94105 San Francisco, CA</strong><br />
 				<strong><u>CREDIT :</u> </strong> Les mentions légales ont étés générées par<strong>
@@ -112,7 +112,7 @@
 			</p>
 
 			<hr />
-			<h1 class="single-title text-center" id="RGPD">Politique de confidentialité (standard RGPD)</h1>
+			<h1 class="single-title text-center" id="RGPD">POLITIQUE DE CONFIDENTIALITE (RGPD)</h1>
 			<h3>Sécurité et protection des données personnelles</h3>
 			<h4>Définitions :</h4>
 
@@ -470,11 +470,5 @@
 		</div>
 	</div>
 </div>
-
-<a class="lightbox-close" href="#close">
-	<div class="lightbox-target" id="expand">
-		<img id="expandImg" src="" />
-	</div>
-</a>
 
 <% include partials/footer %>
