--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -24,7 +24,7 @@
 
 <a class="lightbox-close" href="#close">
 	<div class="lightbox-target" id="expand">
-		<img id="expandImg" src="" />
+		<img alt="Expanded Image" id="expandImg" src="" />
 	</div>
 </a>
 
