--- a/public/style.css
+++ b/public/style.css
@@ -6,11 +6,17 @@
 	/* other brand color */
 	/* layout colors */
 
-	--brand-blue-m2: #0070c1;
+	--brand-blue-m2: #0353a4;
+	--brand-blue-m1: #023e7d;
+	--brand-blue: #002855;
+	--brand-blue-p1: #001845;
+	--brand-blue-p2: #001233;
+
+	/*--brand-blue-m2: #0070c1;
 	--brand-blue-m1: #0d5a91;
 	--brand-blue: #0a3d62;
 	--brand-blue-p1: #143750;
-	--brand-blue-p2: #142837;
+	--brand-blue-p2: #142837;*/
 
 	--interactive-color-m1: #44a2e6;
 	--interactive-color: #1d84ce;
@@ -218,12 +224,19 @@ html {
 	background: #028cb2; /* Old browsers */
 	background: -moz-linear-gradient(top, #028cb2 0%, #025a7f 39%, #004460 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top, #028cb2 0%, #025a7f 39%, #004460 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(
+	background: linear-gradient(to bottom, #023e7d 0%, #002855 39%, #001845 100%);
+	/*
+		--brand-blue-m1: #023e7d;
+	--brand-blue: #002855;
+	--brand-blue-p1: #001845;
+	*/
+
+	/*background: linear-gradient(
 		to bottom,
 		#028cb2 0%,
 		#025a7f 39%,
 		#004460 100%
-	); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	);*/ /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#028cb2', endColorstr='#004460',GradientType=0 ); /* IE6-9 */
 }
 
@@ -1159,20 +1172,20 @@ div.carousel-item.active {
 
 /* SINGLE BLOG */
 .single-wrapper {
-	background: var(--brand-blue-p1);
+	background: var(--light-shade-m1);
 	display: flex;
 	flex-direction: column;
 	position: relative;
-	box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+	/*box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
 	-webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
-	-moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);*/
 }
 
 .content-wrapper {
 	background-color: var(--light-shade-m1);
-	-webkit-box-shadow: 2px 2px 10px 1px rgba(42, 67, 111, 0.67), -2px -2px 10px 1px rgba(10, 25, 49, 0.23);
+	/*	-webkit-box-shadow: 2px 2px 10px 1px rgba(42, 67, 111, 0.67), -2px -2px 10px 1px rgba(10, 25, 49, 0.23);
 	-moz-box-shadow: 2px 2px 10px 1px rgba(42, 67, 111, 0.67), -2px -2px 10px 1px rgba(10, 25, 49, 0.23);
-	box-shadow: 2px 2px 10px 1px rgba(42, 67, 111, 0.67), -2px -2px 10px 1px rgba(10, 25, 49, 0.23);
+	box-shadow: 2px 2px 10px 1px rgba(42, 67, 111, 0.67), -2px -2px 10px 1px rgba(10, 25, 49, 0.23);*/
 	padding: 15px 0px;
 	position: sticky;
 	height: 100%;
@@ -1184,6 +1197,8 @@ div.carousel-item.active {
 }
 
 .single-content {
+	white-space: pre-wrap;
+	word-break: break-word;
 	font-size: 17px;
 }
 
