--- a/views/About.ejs
+++ b/views/About.ejs
@@ -38,7 +38,7 @@
 
 		<div id="contact" class="tab col-xl-9 col-10 nodisplay">
 			<div class="col-md-10 offset-md-1 wrapper">
-				<h1 class="single-title text-center">Contact</h1>
+				<h1 class="single-title text-center">Get in touch</h1>
 				<hr class="hr-pwinty mt-3" />
 				<form class="col-md-10 offset-md-1 mt-4" id="contact" method="POST" action="/api/contact/">
 					<div class="row">
@@ -83,9 +83,7 @@
 					<span id="i_title" class="form-info">Title must contain between 10 and 256 characters</span>
 
 					<label class="control-label">Message</label>
-					<textarea id="content" data-vstring="64;2048" rows="5" name="content" placeholder="Write your message here...." required>
-						<% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea
-					>
+					<textarea id="content" data-vstring="64;2048" rows="5" name="content" placeholder="Write your message here...." required><% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea>
 					<span id="i_content" class="form-info">Content must contain between 64 and 2048 characters</span>
 
 					<div class="text-center">
@@ -101,7 +99,7 @@
 			<div class="biography col-md-10 offset-md-1 wrapper pb-0 pt-4">
 				<div class="bio-img-wrapper col-sm-4 z-0">
 					<div class="sub-img-wrapper">
-						<img class="bio-img w-100" src="/img/upload/biopic.png" />
+						<img alt="Biography Picture - Portrait Image" class="bio-img w-100" src="/img/upload/biopic.png" />
 					</div>
 				</div>
 				<div class="first-bio col-sm-8">
@@ -181,7 +179,7 @@
 					<% } %>
 				</div>
 				<div class="col-md-6 offset-md-3 mb-3 mt-3">
-					<img id="loader" src="/img/loader.gif" />
+					<img alt="gif animation loading" id="loader" src="/img/loader.gif" />
 					<input id="infinitebtn" type="submit" class="logbtn" value="Load more" />
 				</div>
 			</div>
