--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -18,7 +18,7 @@
 		<div class="expandable-card" id="<%= locals.galleries[index]._id %>">
 			<div class="face face1 blog-overlay-wrapper mt-0">
 				<a href="#expand">
-					<img src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100 expandable" alt="<%= locals.galleries[index].title %>" />
+					<img src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100 expandable" alt="Tag Searched Painting - <%= locals.galleries[index].title %>" />
 				</a>
 
 				<div class="blog-overlay expandable" data-id="<%= locals.galleries[index]._id %>" data-isGallery="true">
@@ -38,7 +38,7 @@
 	</div>
 	<% if (!locals.error) { %>
 	<div class="col-md-6 offset-md-3 mb-3 mt-3">
-		<img id="loader" src="/img/loader.gif" />
+		<img alt="loading animation" id="loader" src="/img/loader.gif" />
 		<input id="infinitebtn" type="submit" class="logbtn" value="Load more" />
 	</div>
 	<% } %>
@@ -47,7 +47,7 @@
 <a class="lightbox-close" href="#close">
 	<div class="lightbox-target" id="expand">
 		<% if(locals.galleries){ %>
-		<img id="expandImg" src="/api/image/<%= locals.galleries[0].mainImgId %>" />
+		<img alt="Expanded Image" id="expandImg" src="/api/image/<%= locals.galleries[0].mainImgId %>" />
 		<% } %>
 	</div>
 </a>
