--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -38,14 +38,14 @@
           <% if (locals.images) { %>
             <% locals.images.forEach(function (item, index) { %>
               <li data-target="#carousel-thumb" data-slide-to="<%= index %>" <% if(index == 0) { %>class='active'<% } %>> 
-                <img class="d-block w-100" src="/img/grey_circle.png" alt="..." class="img-fluid">
+                <img class="d-block w-100" src="/img/grey_circle.png" alt="grey circle icon thumbnail" class="img-fluid">
               </li>
             <% }) %>
           <% } %>
         </ol>
       </div>
 
-      <div class="blog-content col-md-10 offset-md-1 mt-3 pt-4">
+      <div class="blog-content col-md-12 mt-3 pt-4">
          <h3 class="single-title col-md-12 mb-0"><%= locals.gallery.title %>  <% if (locals.user && locals.user.role === "admin") { %>
           <a href="/Admin/Galerie/Patch/<%= locals.gallery._id %>"><i class="fas fa-edit"></i></a>
         <% } %> </h3>
@@ -60,11 +60,11 @@
         <% }) %>
       </div>
 
-      <div class="col-md-10 offset-md-1 text-center">
-        <div class="alert alert-danger alert-static" role="alert">
-            For references, check the catalog <a href="/Catalog" target="_blank">HERE</a>
+      <div class="col-md-12 text-center">
+        <div class="alert alert-danger alert-static w-100" role="alert">
+            For references, check the <a href="/Catalog" target="_blank">CATALOG</a>
         </div>
-        <div class="alert alert-warning alert-static" role="alert">
+        <div class="alert alert-warning alert-static w-100" role="alert">
             Please note that the image might get cropped a bit depending on the format size you choose and the actual aspect ratio of the image, although we do our best to provide you with exact reproductions!
         </div>
         <div class="form-group pwinty-wrapper" id="categories">
@@ -107,7 +107,7 @@
 
 <a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
-    <img id="expandImg" src="/api/image/<%= locals.images[0]._id %>"/>
+    <img alt="Expanded Image" id="expandImg" src="/api/image/<%= locals.images[0]._id %>"/>
   </div>
 </a>
 
