--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -73,7 +73,7 @@
 
 						<% if (!locals.user) { %>
 						<li>
-							<a href="/Account" class="navbar-text <%= (locals.active && locals.active == 'Account') ? 'active' : '' %>">Log in</a>
+							<a href="/Login" class="navbar-text <%= (locals.active && locals.active == 'Account') ? 'active' : '' %>">Log in</a>
 						</li>
 						<% } else { %>
 						<li>
