--- a/views/About.ejs
+++ b/views/About.ejs
@@ -1,191 +1,48 @@
 <% include partials/head %>
 
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-<div class="container-with-menu container">
-	<div class="row row-height">
-		<div class="menu col-xl-3 col-2">
-			<ul>
-				<li>
-					<a href="#" id="blog-btn" class="menu-link active disabled"> <i class="fas fa-scroll mr-2"></i> <span>Blog</span> <i class="fas fa-chevron-right chev"></i></a>
-				</li>
-				<li>
-					<a href="#" id="bio-btn" class="menu-link"> <i class="fas fa-address-card mr-2"></i> <span>Bio</span> <i class="fas fa-chevron-right chev"></i></a>
-				</li>
-				<li>
-					<a href="#" id="contact-btn" class="menu-link"> <i class="fas fa-envelope mr-2"></i> <span>Contact</span> <i class="fas fa-chevron-right chev"></i></a>
-				</li>
-				<li>
-					<a href="/Legals"><i class="fa fa-gavel mr-2"></i> <span>Legals</span> <i class="fas fa-chevron-right chev"></i></a>
-				</li>
-			</ul>
 
-			<ul class="footer-list text-center">
-				<li>
-					<a href="https://www.instagram.com/maral.abk/" class="social-btn" target="_blank"><i class="fab fa-instagram"></i></a>
-				</li>
-				<li>
-					<a href="https://www.facebook.com/abkarian.maral/" class="social-btn" target="_blank"><i class="fab fa-facebook-f"></i></a>
-				</li>
-				<li>
-					<a href="https://www.pinterest.fr/MaralAbkarian1/" class="social-btn" target="_blank"><i class="fab fa-pinterest-p"></i></a>
-				</li>
-			</ul>
+<div class="container container-front">
+	<div class="container container-blog h-100 p-0 m-0">
+		<div class="col-md-12 wrapper z-0" id="container-blog">
+			<% if (locals.blogs){ %> <% Object.keys(locals.blogs).forEach(function (index) { %>
+			<div class="blog-row" id="<%= locals.blogs[index]._id %>">
+				<h3 class="blog-title"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].shorttitle %>...</a></h3>
+				<p class="blog-info">
+					uploaded by <b class="blog-author"><%= locals.blogs[index].author %></b>,
+					<i class="blog-date"><%= locals.blogs[index].date %></i>
+				</p>
 
-			<a href="#header" class="fixed-arrow mt-5 text-center">
-				<i class="fas fa-arrow-up fa-2x"></i>
-			</a>
-		</div>
-
-		<div id="contact" class="tab col-xl-9 col-10 nodisplay">
-			<div class="col-md-10 offset-md-1 wrapper">
-				<h1 class="single-title text-center">Get in touch</h1>
-				<hr class="hr-pwinty mt-3" />
-				<form class="col-md-10 offset-md-1 mt-4" id="contact" method="POST" action="/api/contact/">
-					<div class="row">
-						<div class="col-md-6">
-							<label class="control-label">Name</label>
-							<input
-								placeholder="Jean Dupont"
-								type="text"
-								name="name"
-								id="name"
-								data-vstring="4;30"
-								value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>"
-								required
-							/>
-							<span id="i_name" class="form-info"><b>Username</b> must contain between <b>4 and 30 characters</b></span>
-						</div>
-						<div class="col-md-6">
-							<label class="control-label">Email</label>
-							<input
-								placeholder="jeandupont@gmail.com"
-								type="email"
-								name="email"
-								id="email"
-								data-vemail="true"
-								value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>"
-								required
-							/>
-							<span id="i_email" class="form-info"><b>E-mail</b> has to be <b>valid</b></span>
-						</div>
+				<% if (locals.blogs[index].thumbnail) { %>
+				<div class="blog-overlay-wrapper">
+					<div class="blog-overlay">
+						<div class="content-holder ql-editor"></div>
+						<form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">See More</button></form>
 					</div>
-
-					<label class="control-label">Object</label>
-					<input
-						placeholder="Hey, I found your painting really great..."
-						type="text"
-						name="title"
-						id="title"
-						data-vstring="10;256"
-						value="<% if (locals.formData) { %><%= locals.formData.subject %><% } %>"
-						required
-					/>
-					<span id="i_title" class="form-info">Title must contain between 10 and 256 characters</span>
-
-					<label class="control-label">Message</label>
-					<textarea id="content" data-vstring="64;2048" rows="5" name="content" placeholder="Write your message here...." required><% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea>
-					<span id="i_content" class="form-info">Content must contain between 64 and 2048 characters</span>
-
-					<div class="text-center">
-						<div class="g-recaptcha" data-sitekey="6LdiD7oZAAAAAIMXlnCVHOjQQ7UqvLl8vUtaMMA9"></div>
-					</div>
-					<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-					<input type="submit" class="logbtn mt-3" value="Send" id="submit-contact" />
-				</form>
+				</div>
 			</div>
-		</div>
-
-		<div id="bio" class="tab col-xl-9 col-10 nodisplay">
-			<div class="biography col-md-10 offset-md-1 wrapper pb-0 pt-4">
-				<div class="bio-img-wrapper col-sm-4 z-0">
-					<div class="sub-img-wrapper">
-						<img alt="Biography Picture - Portrait Image" class="bio-img w-100" src="/img/upload/biopic.png" />
-					</div>
-				</div>
-				<div class="first-bio col-sm-8">
-					<h1 class="square-title">Maral Abkarian</h1>
-					<p class="square-txt ml-3">
-						Née durant la seconde moitié du XXème siècle, élevée entre Orient du Levant et Occident tricolore, établie sur trois continents, Maral a dans la continuité de ses ancêtres déracinés de
-						leur terre natale par le génocide arménien en 1915, vécu dans différentes contrées à travers le monde.
-					</p>
-				</div>
-				<div class="bio-body col-md-10 offset-md-1">
-					<p class="square-txt">
-						C’est sous un beau jour printanier d’avril, qu’à peine sa mère débarqua au port de la cité phocéenne, faisant ses adieux à son Liban natal, qu’elle vit le jour. Dès son plus jeune âge,
-						elle fut remarquée pour son talent artistique et sa sensibilité, raflant régulièrement les premiers prix des concours artistiques scolaires, derrière son sourire timide et un caractère
-						espiègle.
-					</p>
-					<p class="square-txt">
-						Le temps passa et la petite fille grandissante devint une adolescente en fleur au pays des cèdres, contrée d’accueil de ses parents natals. Mais les nuages obscures s’étendant, la guerre
-						civile plongea le chaos, obligeant la fratrie à fuir vers la Syrie, s’envolant à nouveau vers les terres d’exil, jusqu’en Amérique.
-					</p>
-					<p class="square-txt">
-						De retour finalement en France, Maral a de ses carnets de voyages cultivé une riche expérience de cultures très diverses, française, anglo-saxonne, arabo-levantine, arméno-anatolienne et
-						hellénique.
-					</p>
-					<p class="square-txt">
-						Sa quête artistique est celle d’un beau naturel, dépouillé vers une authenticité directe et accessible à tous, à l’image de son hypersensibilité, spirituelle. Les figures gracieuses, le
-						partage et l’âpreté de la vie humaine sont mises à nues dans son travail, tantôt figuratif, tantôt semi-abstrait, avec le goût du relief et d’un toucher parfois brut, non sans délicatesse.
-					</p>
-					<p class="square-txt">
-						Son goût pour les portraits et les paysages apparaissent régulièrement, témoignant également d’une innocence, sensualité, fraîcheur perdue à notre époque de plus en plus connectée.
-						L’ancien et le moderne, l’occidental et l’oriental, le spirituel et le terrestre, la vie et l’au-delà, thèmes complémentaires que Maral aime exprimer à travers ses œuvres, un message
-						d’espoir et joie, de profondeur, parfois teinté de mélancolie face aux contingences qu’endure l’humain.
-					</p>
-					<p class="square-txt">
-						Soeur de l'acteur Simon Abkarian, Maral Abkarian développe désormais une carrière d'actrice, également connue pour ses talents de gastronome, à la personnalité démonstrative et
-						chaleureuse, non sans pudeur, seule sœur de ses trois frères.
-					</p>
+			<% } else { %>
+			<div class="blog-no-overlay-wrapper">
+				<div class="blog-no-overlay">
+					<div class="content-holder ql-editor"></div>
+					<form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">See More</button></form>
 				</div>
 			</div>
 		</div>
+		<% } %>
 
-		<div id="blog" class="tab col-xl-9 col-10">
-			<div class="container container-blog h-100 p-0 m-0">
-				<div class="">
-					<div class="col-md-10 offset-md-1 wrapper z-0" id="container-blog">
-						<% if (locals.blogs){ %> <% Object.keys(locals.blogs).forEach(function (index) { %>
-						<div class="blog-row" id="<%= locals.blogs[index]._id %>">
-							<h3 class="blog-title"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].shorttitle %>...</a></h3>
-							<p class="blog-info">
-								uploaded by <b class="blog-author"><%= locals.blogs[index].author %></b>,
-								<i class="blog-date"><%= locals.blogs[index].date %></i>
-							</p>
+		<input type="hidden" data-id="<%= locals.blogs[index]._id %>" data-append="<%= locals.blogs[index].shortcontent %>" data-thumbnail="<%= locals.blogs[index].thumbnail %>" />
 
-							<% if (locals.blogs[index].thumbnail) { %>
-							<div class="blog-overlay-wrapper">
-								<div class="blog-overlay">
-									<div class="content-holder ql-editor"></div>
-									<form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">See More</button></form>
-								</div>
-							</div>
-						</div>
-						<% } else { %>
-						<div class="blog-no-overlay-wrapper">
-							<div class="blog-no-overlay">
-								<div class="content-holder ql-editor"></div>
-								<form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">See More</button></form>
-							</div>
-						</div>
-					</div>
-					<% } %>
-
-					<input type="hidden" data-id="<%= locals.blogs[index]._id %>" data-append="<%= locals.blogs[index].shortcontent %>" data-thumbnail="<%= locals.blogs[index].thumbnail %>">
-					
-					<% }) %> <% } else { %>
-					<div class="text-center m-5 p-5 bwhite">
-						<h1>Blog page is under maintenance, please come back later</h1>
-					</div>
-					<% } %>
-				</div>
-				<div class="col-md-6 offset-md-3 mb-3 mt-3">
-					<img alt="gif animation loading" id="loader" src="/img/loader.gif" />
-					<input id="infinitebtn" type="submit" class="logbtn" value="Load more" />
-				</div>
-			</div>
+		<% }) %> <% } else { %>
+		<div class="text-center m-5 p-5 bwhite">
+			<h1>Blog page is under maintenance, please come back later</h1>
 		</div>
+		<% } %>
 	</div>
-</div>
+	<div class="col-md-6 offset-md-3 mb-3 mt-3">
+		<img alt="gif animation loading" id="loader" src="/img/loader.gif" />
+		<input id="infinitebtn" type="submit" class="logbtn" value="Load more" />
+	</div>
 </div>
 
 <script src="/scripts/blog/infiniteBlogs.js" defer></script>
