--- a/views/User.ejs
+++ b/views/User.ejs
@@ -167,6 +167,7 @@
 <div class="container container-front"> 
 		<div id="purchases" class="tab col-md-12">
 			<div class="col-md-10 offset-md-1 p-0">
+				<h1 class="text-center square-title">Order History</h1>
 				<div class="table-responsive">
 					<table class="table table-striped table-hover mb-0">
 						<thead>
