--- a/public/style.css
+++ b/public/style.css
@@ -35,13 +35,23 @@
 	--light-shade-p1: #d6d6d6;
 }
 
-.full-container:nth-of-type(odd) {
-	background: linear-gradient(to bottom, var(--brand-blue), var(--brand-blue-p1));
+.full-container:nth-of-type(even) {
+	/*background: linear-gradient(to bottom, var(--brand-blue), var(--brand-blue-p1));*/
+	background: linear-gradient(to bottom, #3227b1, #2c21ab);
 	/* brand blue brand blue m1 */
 }
 
-.full-container:nth-of-type(even) {
-	background: linear-gradient(to bottom, var(--brand-blue-m1), #07499c);
+.full-container:nth-of-type(odd) {
+	/*background: linear-gradient(to bottom, var(--brand-blue-m1), #07499c);*/
+	background: linear-gradient(to bottom, #1a2271, #040450);
+}
+
+.full-container:nth-of-type(even) .square-title {
+	color: var(--brand-blue-p2);
+}
+
+.full-container:nth-of-type(odd) .square-title {
+	color: #372ac7;
 }
 
 .align-left {
@@ -229,7 +239,7 @@ input[type="radio"] {
 }
 
 html {
-	background: var(--brand-blue);
+	background: #3227b1;
 	/*
 	background: #028cb2; 
 	background: -moz-linear-gradient(top, #028cb2 0%, #025a7f 39%, #004460 100%);
@@ -362,6 +372,8 @@ header {
 	transition: 0.3s ease;
 	border-bottom: 2px solid transparent;
 	margin-bottom: 0em;
+	z-index: 100;
+	background: #1a2271;
 }
 
 header:hover {
@@ -498,6 +510,42 @@ header:hover .navbar-container .navbar-custom .nav-links li a {
 #CGU p {
 	text-indent: 25px;
 }
+
+.anchor-list {
+	background: var(--light-shade);
+	position: fixed;
+	width: 100%;
+	z-index: 99;
+}
+
+.nav-anchor {
+	height: 48px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	margin: 0;
+}
+
+.nav-anchor li {
+	display: inline-block;
+}
+.nav-anchor li a {
+	color: var(--brand-blue);
+	text-decoration: none;
+	font-size: 1.2em;
+	font-weight: 600;
+}
+
+.nav-anchor li a:hover {
+	color: var(--brand-blue-m2) !important;
+	border-bottom: 3px solid var(--brand-blue-p1);
+	padding-bottom: 3px;
+}
+
+.anchor-text.active {
+	border-bottom: 4px solid var(--brand-blue-p1);
+}
+
 /* END HEADER */
 
 /* FOOTER */
@@ -985,6 +1033,12 @@ button:focus {
 	margin: 20px;
 }
 
+.carousel-home {
+	box-shadow: 0px 0px 10px 0 rgba(0, 0, 0, 0.85) !important;
+	-webkit-box-shadow: 0px 0px 10px 0 rgba(0, 0, 0, 0.85) !important;
+	-moz-box-shadow: 0px 0px 10px 0 rgba(0, 0, 0, 0.85) !important;
+}
+
 .content-wrapper .carousel-container {
 	margin: -20px;
 }
@@ -1361,6 +1415,23 @@ div.carousel-item.active {
 	outline: none;
 	cursor: pointer;
 	transition: 0.5s;
+}
+
+.call-btn {
+	height: 60px;
+	width: 30%;
+	min-width: 250px;
+	margin: auto;
+}
+
+.catpcha-row {
+	height: 80px;
+}
+
+.captcha-btn {
+	border-radius: 2px;
+	height: 90%;
+	margin: 0;
 }
 
 .bio-body {
@@ -2593,6 +2664,9 @@ tbody tr:hover {
 }
 /* Medium devices (tablets, 768px and up) */
 @media (max-width: 992px) {
+	.captcha-row {
+		text-align: center;
+	}
 	.catalog-category h4 {
 		margin-top: 5px;
 	}
