--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-    <div class="full-container" id="container-contact">
+    <div class="full-container" id="container-login">
 <div class="container container-front"> 
 
 		<div id="login" class="tab col-md-10 offset-md-1 row">
@@ -72,7 +72,7 @@
 			</div>
 		</div>
 
-		    <div class="full-container" id="container-contact">
+		    <div class="full-container" id="container-lostpw">
 <div class="container container-front"> 
 
 		<div id="lostpw-container" class="tab col-md-12">
