--- a/views/User.ejs
+++ b/views/User.ejs
@@ -1,6 +1,16 @@
 <% include partials/head %>
 
-    <div class="full-container" id="container-contact">
+<div class="anchor-list">
+	<div class="col-md-6 offset-md-3">
+		<ul class="nav-anchor w-100">
+			<li><a href="#header" class="anchor-text active">Settings</a></li>
+			<li><a href="#container-delivery" class="anchor-text">Delivery</a></li>
+			<li><a href="#container-history" class="anchor-text">History</a></li>
+		</ul>
+	</div>
+</div>
+
+    <div class="full-container" id="container-settings">
 <div class="container container-front"> 
 		<div id="parameters" class="tab col-md-12">
 			<div class="col-md-10 offset-md-1 p-2">
@@ -53,7 +63,7 @@
 		</div>
 	</div>
 	
-	    <div class="full-container" id="container-contact">
+	    <div class="full-container" id="container-delivery">
 <div class="container container-front"> 
 		<div id="delivery" class="tab col-md-12">
 			<div class="col-md-10 offset-md-1 p-2 delivery">
@@ -163,7 +173,7 @@
 		</div>
 		</div>
 
-		    <div class="full-container" id="container-contact">
+		    <div class="full-container" id="container-history">
 <div class="container container-front"> 
 		<div id="purchases" class="tab col-md-12">
 			<div class="col-md-10 offset-md-1 p-0">
