--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 		<h1 class="square-title text-center">Want to see more?</h1>
-		<input type="submit" class="submit-btn call-btn" value="Take me to the Gallery" id="submit-contact" />
+		<input type="submit" class="submit-btn call-btn" value="Take me to the Gallery" id="goto-gallery" />
 		<!--/.Controls
 		<div class="thumbnail-wrapper mt-5">
 			<ol class="carousel-indicators">
