--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -30,6 +30,7 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- CUSTOM -->
+		<link rel="icon" href="/favicon.png" />
 		<link rel="stylesheet" href="/style.css" />
 		<!-- Quill RTE -->
 		<script src="/quill/quill.core.js"></script>
